--- a/Smart-mask-tracker/package.json
+++ b/Smart-mask-tracker/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.1",
+    "@expo-google-fonts/kumbh-sans": "^0.4.1",
     "@expo-google-fonts/manrope": "^0.4.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
