--- a/Smart-mask-tracker/android/settings.gradle
+++ b/Smart-mask-tracker/android/settings.gradle
@@ -1,39 +1,24 @@
 pluginManagement {
-  def reactNativeGradlePlugin = new File(
-    providers.exec {
-      workingDir(rootDir)
-      commandLine("node", "--print", "require.resolve('@react-native/gradle-plugin/package.json', { paths: [require.resolve('react-native/package.json')] })")
-    }.standardOutput.asText.get().trim()
-  ).getParentFile().absolutePath
-  includeBuild(reactNativeGradlePlugin)
-  
-  def expoPluginsPath = new File(
-    providers.exec {
-      workingDir(rootDir)
-      commandLine("node", "--print", "require.resolve('expo-modules-autolinking/package.json', { paths: [require.resolve('expo/package.json')] })")
-    }.standardOutput.asText.get().trim(),
-    "../android/expo-gradle-plugin"
-  ).absolutePath
-  includeBuild(expoPluginsPath)
-}
-
-plugins {
-  id("com.facebook.react.settings")
-  id("expo-autolinking-settings")
-}
-
-extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
-  if (System.getenv('EXPO_USE_COMMUNITY_AUTOLINKING') == '1') {
-    ex.autolinkLibrariesFromCommand()
-  } else {
-    ex.autolinkLibrariesFromCommand(expoAutolinking.rnConfigCommand)
+  repositories {
+    gradlePluginPortal()
+    google()
+    mavenCentral()
   }
 }
-expoAutolinking.useExpoModules()
+
+dependencyResolutionManagement {
+  repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+  repositories {
+    google()
+    mavenCentral()
+    maven { url 'https://www.jitpack.io' }
+  }
+}
 
 rootProject.name = 'Smart-mask-tracker'
 
-expoAutolinking.useExpoVersionCatalog()
+// React Native and Expo modules autolinking
+include(':app')
 
-include ':app'
-includeBuild(expoAutolinking.reactNativeGradlePlugin)
+// Automatically handle Expo modules
+apply from: file("../node_modules/expo-modules-autolinking/scripts/autolinking.gradle")
